Ensure the right toolbar remains appropriately visible with scrollbar Depending on height. Also seriously makes the scrollbars more visible also for #85

--- a/resources/robopaint.method-draw.css
+++ b/resources/robopaint.method-draw.css
@@ -8,6 +8,20 @@ body {
   overflow: hidden;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color:#4F80FF;
+}
+
+#tools_top {
+  overflow: hidden;
+  overflow-y: auto;
+  z-index: 2;
+}
+
 button.zoomfit {
   position: absolute;
   right: 250px;
